@@ -1,3 +1,8 @@
+2018-01-07 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/NSApplication.m (-targetForAction:to:from:): Return nil
+	if the target is non-nil but does not respond to the action.
+
 2018-01-01 Fred Kiefer <FredKiefer@gmx.de>
 
 	* Printing/GSCUPS/GSCUPSPrinter.m,
